--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -41,11 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2 \n",
+      "---\n",
+      "     A   B   C\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5 \n",
+      "---\n",
+      "     D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2 \n",
+      "---\n",
+      "     D   E   F\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pd.DataFrame({'A': ['a'+str(x) for x in range(3)],\n",
     "                    'B': ['b'+str(x) for x in range(3)],\n",
@@ -67,7 +93,7 @@
     "                    'F': ['f'+str(x) for x in range(3, 6)]},\n",
     "                     index=[3, 4, 5]) \n",
     "\n",
-    "# print(df1, '\\n---\\n', df2, '\\n---\\n', df3, '\\n---\\n',df4)"
+    "print(df1, '\\n---\\n', df2, '\\n---\\n', df3, '\\n---\\n',df4)"
    ]
   },
   {
@@ -79,11 +105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5\n",
+      "    D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "df1_df2 = pd.concat([df1, df2])\n",
+    "print(df1_df2)\n",
+    "df3_df4 = pd.concat([df3, df4])\n",
+    "print(df3_df4)"
    ]
   },
   {
@@ -99,11 +149,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "df1_df2_df3_df4 = pd.concat([df1_df2, df3_df4])\n",
+    "print (df1_df2_df3_df4)"
    ]
   },
   {
@@ -122,11 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      A    B    C    D    E    F\n",
+      "0    a0   b0   c0  NaN  NaN  NaN\n",
+      "1    a1   b1   c1  NaN  NaN  NaN\n",
+      "2    a2   b2   c2  NaN  NaN  NaN\n",
+      "3    a3   b3   c3  NaN  NaN  NaN\n",
+      "4    a4   b4   c4  NaN  NaN  NaN\n",
+      "5    a5   b5   c5  NaN  NaN  NaN\n",
+      "6   NaN  NaN  NaN   d0   e0   f0\n",
+      "7   NaN  NaN  NaN   d1   e1   f1\n",
+      "8   NaN  NaN  NaN   d2   e2   f2\n",
+      "9   NaN  NaN  NaN   d3   e3   f3\n",
+      "10  NaN  NaN  NaN   d4   e4   f4\n",
+      "11  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "df_concat = pd.concat([df1, df2, df3, df4], ignore_index=True)\n",
+    "print(df_concat)\n",
+    "# Now the dataframe has its rows numbered from 0 to 11 instead of 0 to 5 x 2"
    ]
   },
   {
@@ -150,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +318,7 @@
        "2  i2  a2  b2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +388,7 @@
        "2  i3  c3  d3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,11 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      C   D    A    B\n",
+      "idx                  \n",
+      "i1   c1  d1   a1   b1\n",
+      "i2   c2  d2   a2   b2\n",
+      "i3   c3  d3  NaN  NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "right_left_joined = (right.set_index('idx')).join(left.set_index('idx'))\n",
+    "print(right_left_joined)"
    ]
   },
   {
@@ -364,12 +470,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D   E   F\n",
+      "0  a0  b0  c0  d0  e0  f0\n",
+      "1  a1  b1  c1  d1  e1  f1\n",
+      "2  a2  b2  c2  d2  e2  f2\n",
+      "3  a3  b3  c3  d3  e3  f3\n",
+      "4  a4  b4  c4  d4  e4  f4\n",
+      "5  a5  b5  c5  d5  e5  f5\n",
+      "    A   B   C   D   E   F\n",
+      "0  a0  b0  c0  d0  e0  f0\n",
+      "1  a1  b1  c1  d1  e1  f1\n",
+      "2  a2  b2  c2  d2  e2  f2\n",
+      "3  a3  b3  c3  d3  e3  f3\n",
+      "4  a4  b4  c4  d4  e4  f4\n",
+      "5  a5  b5  c5  d5  e5  f5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using Join\n",
+    "joined_df = (df1_df2).join(df3_df4, how='outer')\n",
+    "print(joined_df)\n",
+    "\n",
+    "# Using Merge\n",
+    "merged_df = pd.merge(df1_df2, df3_df4, left_index=True, right_index=True, how='outer')\n",
+    "print(merged_df)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -388,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "toc": {
    "base_numbering": 1,
